[gd_scene load_steps=10 format=2]

[ext_resource path="res://Escenas/Spawn.gd" type="Script" id=1]
[ext_resource path="res://Escenas/Spawn_Node.gd" type="Script" id=2]
[ext_resource path="res://Shaders/Blink.shader" type="Shader" id=3]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=6]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/active = false

[sub_resource type="Animation" id=2]
resource_name = "StartBlinkSpawn"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "StopBlinkSpawn"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Spawn_Node" type="Node2D"]
script = ExtResource( 2 )

[node name="Spawn" type="Position2D" parent="."]
position = Vector2( 96, 0 )
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="Spawn"]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 8

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/StartBlinkSpawn = SubResource( 2 )
anims/StopBlinkSpawn = SubResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 5 )]

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
collision_mask = 4
[connection signal="timeout" from="Spawn/Timer" to="Spawn" method="_on_Timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]

[editable path="Hurtbox"]
